@@ -17,6 +17,8 @@
 - Fixed memory corruption on Keyboard refresh
 - Fixed wave size corruption while editing samples in Sample Editor
 - Fixed freeze when cloning a Sample Channel with a sample in it
+- Fixed buffer overflow when playing an edited sample
+- Creates default empty columns on 'Reset to initial state'
 
 
 0.16.0 beta-1 --- 2019 . 10 . 19
